--- a/admin-ui/src/app/app.component.html
+++ b/admin-ui/src/app/app.component.html
@@ -14,6 +14,22 @@
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
+
+          <ng-container *ngIf="authState$ | async as authState">
+            <ng-container *ngIf="!authState.token; else loggedInBlock">
+              <ion-item routerDirection="root" lines="none" detail="false" routerLinkActive="selected" routerLink="/auth/login">
+                <ion-icon aria-hidden="true" slot="start" ios="log-in-outline" md="log-in-sharp"></ion-icon>
+                <ion-label>Entrar</ion-label>
+              </ion-item>
+            </ng-container>
+
+            <ng-template #loggedInBlock>
+              <ion-item routerDirection="root" lines="none" detail="false" routerLinkActive="selected" (click)="logout()">
+                <ion-icon aria-hidden="true" slot="start" ios="log-out-outline" md="log-out-sharp"></ion-icon>
+                <ion-label>Sair</ion-label>
+              </ion-item>
+            </ng-template>
+          </ng-container>
         </ion-list>
       </ion-content>
     </ion-menu>
