--- a/admin-ui/src/app/produtos/components/lista-produtos/lista-produtos.component.html
+++ b/admin-ui/src/app/produtos/components/lista-produtos/lista-produtos.component.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
       Produtos
     </ion-title>
@@ -26,16 +29,21 @@
         <td mat-cell *matCellDef="let produto"> {{produto.id}} </td>
       </ng-container>
       
-      <ng-container matColumnDef="nome">
+      <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let produto"> {{produto.nome}} </td>
+        <td mat-cell *matCellDef="let produto"> {{produto.name}} </td>
       </ng-container>
       
-      <ng-container matColumnDef="tipo">
-        <th mat-header-cell *matHeaderCellDef> Tipo </th>
-        <td mat-cell *matCellDef="let produto"> {{produto.tipo}} </td>
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> Preço </th>
+        <td mat-cell *matCellDef="let produto"> {{produto.price | currency: 'BRL'}} </td>
       </ng-container>
       
+      <ng-container matColumnDef="quantity">
+        <th mat-header-cell *matHeaderCellDef> Estoque </th>
+        <td mat-cell *matCellDef="let produto"> {{produto.quantity}} </td>
+      </ng-container>
+
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Ações </th>
         <td mat-cell *matCellDef="let produto"> 
@@ -48,8 +56,8 @@
         </td>
       </ng-container>
       
-      <tr mat-header-row *matHeaderRowDef="['id', 'nome', 'tipo', 'actions']"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['id', 'nome', 'tipo', 'actions']"></tr>
+      <tr mat-header-row *matHeaderRowDef="['id', 'name', 'price', 'quantity', 'actions']"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['id', 'name', 'price', 'quantity', 'actions']"></tr>
     </table>
     
   </div>
