--- a/admin-ui/src/app/produtos/components/produto-form/produto-form.component.html
+++ b/admin-ui/src/app/produtos/components/produto-form/produto-form.component.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
       <ion-back-button defaultHref="/produtos"></ion-back-button>
     </ion-buttons>
     <ion-title>
@@ -21,63 +22,17 @@
         <ion-card-content fxLayout="column" fxLayoutAlign="center wrap" fxLayoutGap=".5rem">
           <mat-form-field appearance="outline">
             <mat-label>Nome do Produto</mat-label>
-            <input matInput formControlName="nome">
+            <input matInput type="string" formControlName="name">
           </mat-form-field>
           
           <mat-form-field appearance="outline">
-            <mat-label>Tipo do Produto</mat-label>
-            <input matInput formControlName="tipo">
-          </mat-form-field>
-        </ion-card-content>
-      </ion-card>
-      
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>Informações de Insumo</ion-card-title>
-        </ion-card-header>
-        <ion-card-content fxLayout="column" fxLayoutAlign="center wrap" fxLayoutGap=".5rem">
-          <mat-form-field appearance="outline">
-            <mat-label>ID do Insumo</mat-label>
-            <input matInput formControlName="insumoId">
+            <mat-label>Preço</mat-label>
+            <input matInput formControlName="price" prefix="R$" mask="separator.2" thousandSeparator="." [dropSpecialCharacters]="true">
           </mat-form-field>
           
           <mat-form-field appearance="outline">
-            <mat-label>Nome do Insumo</mat-label>
-            <input matInput formControlName="insumoNome">
-          </mat-form-field>
-        </ion-card-content>
-      </ion-card>
-      
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>Informações de Estoque</ion-card-title>
-        </ion-card-header>
-        <ion-card-content fxLayout="column" fxLayoutAlign="center wrap" fxLayoutGap=".5rem">
-          <mat-form-field appearance="outline">
-            <mat-label>Quantidade em Estoque</mat-label>
-            <input matInput formControlName="quantidadeEstoque">
-          </mat-form-field>
-        </ion-card-content>
-      </ion-card>
-      
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>Informações do Lote de Produção</ion-card-title>
-        </ion-card-header>
-        <ion-card-content fxLayout="column" fxLayoutAlign="center wrap" fxLayoutGap=".5rem">
-          <mat-form-field appearance="outline">
-            <mat-label>Data de Produção</mat-label>
-            <input matInput type="date" formControlName="dataProducao">
-          </mat-form-field>
-          
-          <mat-form-field appearance="outline">
-            <mat-label>Data de Validade</mat-label>
-            <input matInput type="date" formControlName="dataValidade">
-          </mat-form-field>
-          
-          <mat-form-field appearance="outline">
-            <mat-label>Quantidade no Lote</mat-label>
-            <input matInput formControlName="quantidadeLote">
+            <mat-label>Quantidade em estoque</mat-label>
+            <input matInput type="tel" formControlName="quantity">
           </mat-form-field>
         </ion-card-content>
       </ion-card>
