Adicionado suporte ao fluxo OAuth2 com Google

--- a/admin-ui/src/app/auth/components/login/login.component.html
+++ b/admin-ui/src/app/auth/components/login/login.component.html
@@ -4,7 +4,7 @@
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
       <ion-title>
-        Login
+        Entrar
       </ion-title>
     </ion-toolbar>
   </ion-header>
@@ -33,6 +33,16 @@
           </ion-button>
           <ion-button color="primary" type="submit" [disabled]="loginForm.invalid || loginForm.pristine">
             Entrar
+          </ion-button>
+        </div>
+
+        <div class="inset-shadow-line"></div>
+
+        <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap=".5rem">
+          <ion-text color="medium" size="small">Alternativamente, você pode:</ion-text>
+          <ion-button color="primary" type="button" (click)="loginWithGoogle()">
+            <ion-icon name="logo-google" slot="start"></ion-icon>
+            Entrar com Google
           </ion-button>
         </div>
       </form>
