--- a/admin-ui/src/app/auth/components/login/login.component.scss
+++ b/admin-ui/src/app/auth/components/login/login.component.scss
@@ -1,3 +1,10 @@
 form {
     max-width: 100%;
 }
+
+.inset-shadow-line {
+    height: 2px;
+    width: 100%;
+    box-shadow: inset 0 -1px 2px -2px #7a7a7a;
+    margin: 2rem auto;
+}
