--- a/admin-ui/src/theme/variables.scss
+++ b/admin-ui/src/theme/variables.scss
@@ -39,12 +39,12 @@ $app-theme: mat.define-light-theme((
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #d32f0e;
-  --ion-color-primary-rgb: 211, 47, 14;
+  --ion-color-primary: #2b68c9;
+  --ion-color-primary-rgb: 43, 104, 201;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #b7290a;
-  --ion-color-primary-tint: #d74527;
+  --ion-color-primary-shade: #12418d;
+  --ion-color-primary-tint: #6186c1;
 
 
   /** secondary **/
@@ -80,12 +80,12 @@ $app-theme: mat.define-light-theme((
   --ion-color-warning-tint: #ffca22;
 
   /** danger **/
-  --ion-color-danger: #eb445a;
-  --ion-color-danger-rgb: 235, 68, 90;
+  --ion-color-danger: #d32f0e;
+  --ion-color-danger-rgb: 211, 47, 14;
   --ion-color-danger-contrast: #ffffff;
   --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #cf3c4f;
-  --ion-color-danger-tint: #ed576b;
+  --ion-color-danger-shade: #b7290a;
+  --ion-color-danger-tint: #d74527;
 
   /** dark **/
   --ion-color-dark: #222428;
